2002-03-26  Dave Camp  <dave@ximian.com>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): Free the path
	after calling gtk_tree_view_row_activated() rather than before.

2002-03-25  Sven Neumann  <sven@gimp.org>

	* gtk/gtkrc.c (gtk_rc_parse_font_name): free the style's
	font_description before assigning a new one.
	(gtk_rc_parse_stock): always unref the created icon_set. #76289
	
2002-03-25  Mark McLoughlin  <mark@skynet.ie>

	* gtk/gtkbindings.c: (gtk_binding_entry_add_signal),
	kill code duplicated in gtk_binding_entry_add_signall.

Sun Mar 24 10:32:38 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreemodel.c (gtk_tree_path_copy): Make path arg const, #75653

	* gtk/gtkfontsel.c (gtk_font_selection_show_available_styles): fix
	a warning

	* gtk/gtktreeview.c (gtk_tree_view_button_press): remove the grab
	when we emit row_activated so that listeners of this signal can
	grab the mouse, #75629

2002-03-23  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextlayout.c (gtk_text_layout_real_invalidate):
	invalidate the line containing start, even if the [start,end)
	range is empty (just invalidate [start,end], essentially).
	Partially fixes #72374

2002-03-23  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextview.c (gtk_text_view_do_popup): end any selection in
	progress, patch from db@zigo.dhs.org, #74620

2002-03-23  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextview.c (gtk_text_view_move_cursor_internal): extend
	selection for pageup/pagedown and ctrl+pageup/pagedown if 
	shift is held. more of #53934

2002-03-23  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextview.c (gtk_text_view_destroy_layout): disconnect 
	layout handlers earlier in the function, to avoid possible
	reentrancy screwups
	(gtk_text_view_invalidate): Don't install idle handlers if 
	layout == NULL, otherwise we get problems during finalization 
	since clearing the buffer invalidates and puts the idle handlers
	back after we destroy the layout. #74660